--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Masato Hagiwara 2018.<br />
+        <p class="m-0 text-center text-white">Copyright &copy; <a href="http://masatohagiwara.net/">Masato Hagiwara</a> 2018.<br />
             <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
       </div>
       <!-- /.container -->
